--- a/assets/style.css
+++ b/assets/style.css
@@ -82,7 +82,7 @@ a{
 #food-details{
     width: 500px;
     margin: 10px auto;
-    background-color: #fff;
+    background-color: #00073a;
     box-shadow: 10px 10px 15px gray;
     border-radius: 10px;
 }
