--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
 body{
     width: 70%;
     height: 100%;
+    min-height: 100%;
     margin: 0 auto;
 }
 ul,li{
@@ -68,15 +69,16 @@ a{
 }
 
 #showedItem{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 10;
     display: none;
     width: 100%;
-    height: 100%;
+    /* height: 100%;
+    min-height: 100%; */
     background-color: rgba(0, 0, 0, 0.85);
-    padding: 150px 0;
+    padding: 50px 0;
     text-align: center;
 }
 #food-details{
@@ -85,10 +87,22 @@ a{
     background-color: #00073a;
     box-shadow: 10px 10px 15px gray;
     border-radius: 10px;
+    color: #fff;
 }
 #food-details ul{
     text-align: left;
-    padding: 5px;
+    padding-left: 15px;
+    line-height: 1.8;
+}
+#food-details h4{
+    font-size: 20px;
+    line-height: 1.8;
+}
+#food-details h4 i{
+    color: red;
+}
+#food-details ul i{
+    color: #3fff00;
 }
 #food-details img{
     width: 100%;
@@ -101,4 +115,16 @@ a{
     color: red;
     background-color: transparent;
     border: none;
+}
+.warning-area{
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    color: #f50a45;
+    font-family: cursive;
+    font-size: 25px;
+}
+.warning-area i{
+    color: red;
+    font-size: 30px;
 }
